# ciconia

./: README.md  README_zh-CN.md  index.html  package-lock.json  package.json
.husky/: commit-msg  pre-commit
src/: App.vue  api.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_initial_tables.sql
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: docker.rs  mod.rs  settings.rs  tunnel.rs
src-tauri/src/database/: mod.rs  models.rs
src-tauri/src/database/entities/: app_settings.rs  mod.rs  tunnel_config.rs
src-tauri/src/database/entity/: app_settings.rs  mod.rs  prelude.rs  tunnel_config.rs
src-tauri/src/server/: actor.rs  manager.rs  mod.rs  model.rs  remote_cmd.rs  server_manager.rs  ssh.rs
src-tauri/src/service/: tunnel.rs
src-tauri/src/settings/: mod.rs
src/components/: LogsModal.vue  SettingsModal.vue  TunnelCard.vue  TunnelModal.vue
src/components/ui/: Switch.vue
src/utils/: theme.ts
