[package]
name = "ciconia"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png", "specta"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-autostart = "2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
    "uuid",
] }
sea-orm = { version = "1.0.0-rc.27", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }
tokio = { version = "1.49.0", features = ["full"] }

russh = "0.56.0"
anyhow = "1.0.100"
once_cell = { version = "1.19.0", features = ["std"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
shell-escape = "0.1.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
